tests/test_assets/semantic/invalid/functions/argument_count.cog
add::(a, b: i32) -> i32 {
    return a + b;
}

too_few::() -> void {
    result := add(1);
}

too_many::() -> void {
    result := add(1, 2, 3);
}