tests/test_assets/semantic/invalid/functions/argument_count.expected
semantic error at line 6: wrong number of arguments: expected 2, got 1
semantic error at line 10: wrong number of arguments: expected 2, got 3
2 semantic errors generated.
